@@ -280,7 +280,7 @@ test coroutine-1.12 {proc as coroutine} -setup {
 test coroutine-1.13 {subst as coroutine: literal} {
     list [coroutine foo eval {subst {>>[yield a],[yield b]<<}}] [foo x] [foo y]
 } {a b >>x,y<<}
-test coroutine-1.14 {subst as coroutine: in variable} knownBug {
+test coroutine-1.14 {subst as coroutine: in variable} {
     set pattern {>>[yield c],[yield d]<<}
     list [coroutine foo eval {subst $pattern}] [foo p] [foo q]
 } {c d >>p,q<<}
